<resources>
    <string name="app_name">Rabbits</string>

    <!-- Common -->
    <string name="common_state_no_item">Список пуст</string>
    <!-- Common -->

    <!-- About Farm -->
    <!-- About Farm Rabbits -->
    <string name="farm_rabbits_title">Данные о ферме</string>
    <string name="farm_rabbits_btn_rabbits">Кролики</string>
    <string name="farm_rabbits_btn_cages">Клетки</string>
    <string name="farm_rabbits_txt_sort">Сортировать</string>

    <string name="farm_rabbits_txt_number_of_cage">№ клетки</string>
    <string name="farm_rabbits_txt_age">Возраст</string>
    <string name="farm_rabbits_txt_gender">Пол</string>
    <string name="farm_rabbits_txt_type">Тип</string>
    <!-- About Farm Rabbits -->

    <!-- About Farm Cages -->
    <string name="farm_cages_txt_number_of_farm">№ фермы %s</string>
    <string name="farm_cages_txt_number">Номер</string>
    <string name="farm_cages_txt_type">Тип</string>
    <string name="farm_cages_txt_status">Статус</string>

    <string name="farm_button_area_cage_is_repaired">Клетка отремонтирована</string>
    <string name="farm_button_area_cage_is_cleaned">Клетка убрана</string>
    <string name="farm_button_area_need_repair">Требуется ремонт</string>
    <string name="farm_button_area_need_clean">Требуется уборка</string>
    <!-- About Farm Cages -->

    <!-- About Farm Rabbit Settings -->
    <string name="farm_rabbits_settings_txt_number_of_farm">Номер фермы</string>
    <string name="farm_rabbits_settings_txt_choose_gender">Выбрать пол</string>
    <string name="farm_rabbits_settings_txt_type_of_rabbit">Тип кролика</string>
    <string name="farm_rabbits_settings_txt_breed_of_rabbit">Порода кролика</string>
    <string name="farm_rabbits_settings_txt_age">Возраст (в днях)</string>
    <string name="farm_rabbits_settings_number_of_cage">Номер клетки</string>
    <string name="farm_rabbits_settings_txt_status_of_cage">Статус клетки</string>
    <string name="farm_rabbits_settings_btn_show">Отобразить</string>

    <string name="farm_rabbits_settings_btn_male">Самец</string>
    <string name="farm_rabbits_settings_btn_female">Самка</string>
    <string name="farm_rabbits_settings_btn_type_feedlots">Откормочный</string>
    <string name="farm_rabbits_settings_btn_type_reproduction">Размножение</string>
    <string name="farm_rabbits_settings_btn_type_baby">Малыш</string>
    <string name="farm_rabbits_settings_txt_from">от:</string>
    <string name="farm_rabbits_settings_txt__to">до:</string>
    <!-- About Farm Rabbit Settings -->

    <!-- About Farm Cage Settings -->
    <string name="farm_cage_settings_txt_number_of_farm">Номер фермы</string>
    <string name="farm_cage_settings_txt_type_of_cage">Тип клетки</string>
    <string name="farm_cage_settings_txt_count_of_rabbits">Кол-во кроликов</string>
    <string name="farm_cage_settings_txt_status_of_cage">Статус клетки</string>
    <string name="farm_cage_settings_btn_status_of_cage_need_clean">Треб. уборка</string>
    <string name="farm_cage_settings_btn_status_of_cage_need_repair">Треб. ремонт</string>
    <string name="farm_cage_settings_btn_show">Отобразить</string>
    <!-- About Farm Cage Settings -->

    <!-- Dialog Fragment Weigh Rabbit -->
    <string name="dialog_weight_title">Взвесить кролика</string>
    <string name="dialog_weight_txt_current_weight">Текущий вес кролика: %s кг</string>
    <string name="dialog_weight_new_weight">Новый вес кролика</string>
    <string name="dialog_weight_btn_save">Сохранить вес кролики</string>
    <!-- Dialog Fragment Weigh Rabbit -->

    <!-- Dialog Fragment Rabbit -->
    <string name="dialog_rabbit_txt_title">Кролик</string>
    <string name="dialog_rabbit_txt_id"><b>#%d</b></string>
    <string name="dialog_rabbit_txt_weight"><b>%s кг</b></string>
    
    <string name="dialog_rabbit_txt_birthday">Дата рождения: <b>%s</b></string>
    <string name="dialog_rabbit_txt_age">Возраст: <b>%s дн.</b></string>
    
    <string name="dialog_rabbit_txt_type">Тип: <b>%s</b></string>
    <string name="dialog_rabbit_txt_breed">Порода: <b>%s</b></string>
    <string name="dialog_rabbit_txt_number_of_cage">№ клетки: <b>%d-%d(%s)</b></string>
    
    <string name="dialog_rabbit_txt_status">Статус: <b>%s</b></string>
    <string name="dialog_rabbit_txt_output">Кол-во выводов: <b>%s</b></string>
    <string name="dialog_rabbit_txt_output_efficiency">Средний вывод: <b>%s</b></string>

    <string name="dialog_rabbit_txt_history_of_operations">История операций</string>
    <!-- Dialog Action Fragment Rabbit -->
    <!-- About Farm -->

    <!-- Tasks-->

    <string name="tasks_title">Задачи</string>
    <string name="tasks_btn_death">Смерть</string>
    <string name="tasks_btn_not_yet_done">Не выполнено</string>
    <string name="tasks_btn_done">Выполнено</string>
    <string name="tasks_txt_sort">Сортировать (дн)</string>

    <string name="task_item_btn_not_yet_done">Не выполнено</string>
    <string name="task_item_btn_done">Выполнено</string>
    <string name="task_item_cage_format">%d-%d(%s)</string>
    <string name="task_item_weight_format">%s кг.</string>

    <!-- Item deposition-->
    <string name="task_item_deposition_from_mother_txt_title">Отсадка от мат.</string>
    <string name="task_item_deposition_from_mother_txt_cage_to">Самцы: %d-%d(%s), Самки: %d-%d(%s)</string>
    <string name="task_item_deposition_txt_title_to_fattening">Отсадка (размнож. -> откорм.)</string>
    <string name="task_item_deposition_txt_title_to_reproduction">Отсадка (откорм. -> размнож.)</string>
    <string name="task_item_deposition_txt_number_of_cage_from">№ клетки ИЗ</string>
    <string name="task_item_deposition_txt_number_of_cage_to">№ клетки В</string>
    <string name="task_item_deposition_txt_count_of_male">Количество самцов</string>
    <string name="task_item_deposition_txt_count_of_female">Количество самок</string>
    <!-- Item deposition-->

    <!-- Item vaccination-->
    <string name="task_item_vaccination_txt_item_title">Вакцинация</string>
    <string name="task_item_vaccination_txt_number_of_cage">№ клетки</string>
    <!-- Item vaccination-->

    <!-- Item inspection-->
    <string name="task_item_inspection_txt_title">Осмотр (Убой)</string>
    <string name="task_item_inspection_txt_number_of_cage">№ клетки</string>
    <string name="task_item_inspection_txt_weight_of_rabbit">Вес кролика (кг)</string>
    <!-- Item inspection-->

    <!-- Item reproduction-->
    <string name="task_item_reproduction_title">Размножение</string>
    <string name="task_item_reproduction_txt_take_female_from">Взять самку ИЗ (№ клетки)</string>
    <string name="task_item_reproduction_txt_refer_female_to_male">Отнести к самцу В (№ клетки)</string>
    <!-- Item reproduction-->

    <!-- Item kill -->
    <string name="task_item_kill_title">Убой</string>
    <string name="task_item_kill_txt_number_of_cage">№ клетки</string>
    <string name="task_item_kill_txt_weight_of_rabbit">Вес кролика</string>
    <!-- Item kill -->

    <!-- Floating Action Fragment Death -->
    <string name="tasks_floating_action_death_title">Смерть</string>
    <string name="tasks_floating_action_death_number_of_cage">№ клетки</string>
    <string name="tasks_floating_action_death_cause_of_death">Причина смерти</string>
    <string name="tasks_floating_action_death_btn_save">Сохранить</string>
    <!-- Floating Action Fragment Death -->
    <!-- Tasks-->

    <!-- Birth -->
    <string name="birth_title">Рождение</string>
    <string name="birth_btn_not_yet_confirmed">Не подтверждено</string>
    <string name="birth_btn_confirmed">Подтверждено</string>
    <string name="birth_txt_sort">Сортировать (дн)</string>

    <!-- Item -->
    <string name="birth_item_title">Беременная самка</string>
    <string name="birth_item_txt_number_of_cage">№ клетки</string>
    <string name="birth_item_txt_status">Статус</string>
    <string name="birth_item_txt_not_confirmed">Не подтверждено</string>
    <string name="birth_item_txt_confirmed">Оплодотворена</string>
    <string name="birth_item_btn_fertilized">Оплодотворена</string>
    <string name="birth_item_btn_not_fertilised">Не оплодотворена</string>
    <string name="birth_item_btn_take_births">Принять роды</string>
    <!-- Item -->

    <!-- Floating Action Fragment -->
    <string name="birth_floating_action_title">Принять роды</string>
    <string name="birth_floating_action_count_of_rabbit">Количество рожденных кроликов</string>
    <string name="birth_floating_action_btn_save">Сохранить</string>
    <!-- Floating Action Fragment -->
    <!-- Birth -->
</resources>