<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/farm_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginTop="@dimen/standard_margin"

        android:text="@string/farm_rabbits_title"
        android:textColor="@color/black"
        android:textSize="@dimen/title_txt_size"


        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_exit"
        android:layout_width="@dimen/farm_btn_exit"
        android:layout_height="@dimen/farm_btn_exit"

        android:layout_margin="30dp"
        android:background="@drawable/ic_close_menu"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sort_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginHorizontal="@dimen/standard_margin"

        android:background="@drawable/shape_item_corner"
        android:elevation="50dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            style="@style/FarmRabbitsSettingsText"

            android:id="@+id/txt_number_of_farm"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"

            android:text="@string/farm_cage_settings_txt_number_of_farm"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/FarmRabbitsSettingsText"

            android:id="@+id/txt_type_of_cage"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"

            android:text="@string/farm_cage_settings_txt_type_of_cage"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_number_of_farm" />

        <TextView
            style="@style/FarmRabbitsSettingsText"

            android:id="@+id/txt_count_of_rabbit"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"

            android:text="@string/farm_cage_settings_txt_count_of_rabbits"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_type_of_cage" />

        <TextView
            style="@style/FarmRabbitsSettingsText"

            android:id="@+id/txt_status_of_cage"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"

            android:text="@string/farm_cage_settings_txt_status_of_cage"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_count_of_rabbit" />

        <Spinner
            style="@style/FarmRabbitsButton"
            android:id="@+id/spinner_farm"
            android:layout_height="@dimen/farm_rabbit_settings_btn_height"
            android:layout_width="@dimen/farm_rabbit_settings_btn_width"

            android:layout_marginHorizontal="@dimen/standard_margin"
            android:background="@drawable/shape_item_text"

            android:gravity="center_vertical|start"

            android:textSize="@dimen/standard_txt_size"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            style="@style/FarmRabbitsButton"
            android:id="@+id/spinner_type_of_cage"
            android:layout_height="@dimen/farm_rabbit_settings_btn_height"
            android:layout_width="@dimen/farm_rabbit_settings_btn_width"

            android:layout_marginHorizontal="@dimen/standard_margin"
            android:background="@drawable/shape_item_text"

            android:gravity="center_vertical|start"

            android:textSize="@dimen/standard_txt_size"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_farm" />

        <EditText
            style="@style/FarmRabbitsButton"
            android:id="@+id/edit_txt_count_of_rabbit"
            android:layout_height="@dimen/farm_rabbit_settings_btn_height"
            android:layout_width="@dimen/farm_rabbit_settings_btn_width"

            android:paddingHorizontal="10dp"

            android:layout_marginHorizontal="@dimen/standard_margin"
            android:background="@drawable/shape_item_text"

            android:gravity="center_vertical|start"

            android:textSize="@dimen/standard_txt_size"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_type_of_cage" />

        <CheckBox
            style="@style/FarmRabbitsButton"
            android:id="@+id/btn_need_clear"
            android:layout_height="@dimen/farm_rabbit_settings_btn_height"
            android:layout_width="@dimen/farm_rabbit_settings_btn_width"

            android:button="@drawable/selector_check_box"
            android:background="@drawable/shape_item_text"

            android:paddingStart="5dp"
            android:paddingEnd="5dp"

            android:gravity="end|center_vertical"

            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:padding="0dp"

            android:textAllCaps="false"
            android:textSize="@dimen/standard_txt_size"
            android:text="@string/farm_cage_settings_btn_status_of_cage_need_clean"

            app:layout_constraintTop_toBottomOf="@id/edit_txt_count_of_rabbit"
            app:layout_constraintEnd_toEndOf="parent"/>

        <CheckBox
            style="@style/FarmRabbitsButton"
            android:id="@+id/btn_need_repair"
            android:layout_height="@dimen/farm_rabbit_settings_btn_height"
            android:layout_width="@dimen/farm_rabbit_settings_btn_width"

            android:paddingStart="5dp"
            android:paddingEnd="5dp"

            android:button="@drawable/selector_check_box"
            android:background="@drawable/shape_item_text"

            android:gravity="end|center_vertical"

            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:padding="0dp"

            android:textAllCaps="false"
            android:textSize="@dimen/standard_txt_size"
            android:text="@string/farm_cage_settings_btn_status_of_cage_need_repair"

            app:layout_constraintTop_toBottomOf="@id/btn_need_clear"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/farm_rabbit_settings_btn_show_height"

            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="@dimen/standard_margin"

            android:insetTop="0dp"
            android:insetBottom="0dp"

            android:background="@drawable/shape_btn_show"

            android:text="@string/farm_rabbits_settings_btn_show"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="@dimen/farm_rabbit_settings_btn_show_text_size"

            app:layout_constraintTop_toBottomOf="@+id/btn_need_repair"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>